[package]
name = "wish"
version = "0.1.0"
edition = "2018"
authors = ["Gacar"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
uint = { version = "0.9.0", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
